--- a/pack.yaml
+++ b/pack.yaml
@@ -1,6 +1,6 @@
 ---
-ref: synergy-tweet
-name: synergy-tweet
+ref: synergytweet
+name: synergytweet
 description: HPE Synergy-OneView Twitter Integration Pack
 keywords:
   - Synergy
